<resources>
    <string name="app_name">FindIt</string>
    <string name="no_location">GPS недоступен</string>
    <string name="no_available">Данные отсутствуют</string>
    <string name="stop_tracking">Остановить поиск</string>
    <string name="start_tracking">Где я?</string>
    <string name="ok">ОК</string>
    <string name="tv_email">Ваша почта</string>
    <string name="tv_password">Ваш пароль</string>
    <string name="send">Отправить</string>
    <string name="search_hint">Поиск друзей</string>
    <string name="wrong_email">Неверный email</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="right_email">Почта верная</string>
    <string name="right_password">Пароль верный</string>
    <string name="alternative_entering">Альтернативный вход</string>
    <string name="permition_requarement">Требуется разрешение на определение \n на определение вашего местоположения</string>
    <string name="internet_not_available">Интернет недоступен</string>
    <string name="service_not_available">Сервис недоступен</string>
    <string name="address">Адрес</string>
    <string name="url_1">https://i7.photo.2gis.com/images/branch/112/15762598728101237_0c26.jpg</string>
    <string name="google_maps_key">AIzaSyCHt3B5Ql_S0RmdnkcsEwvyemo9L6XrKY4</string>
    <string name="url_2">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvsfKlopu51FhPTI3DsgfK-LnuxWTacZAQJW8fqN2hwSf0m7D6</string>
    <string name="register">Войти</string>
    <string name="Registration">Регистрация</string>
    <string name="tv_password_repeat">Повторите пароль</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="exit">Выход</string>
    <string name="about">О приложении</string>
    <string name="enter_name">Введите имя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="bonus">Бонусы</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string name="scan_qr_code">QR Сканер</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата завершения</string>
    <string name="tounament_type">Тип турнира</string>
    <string name="difficulty">Сложность</string>
    <string name="tounament_name">Название турнира</string>
    <string name="tounament_id">Идентификатор турнира</string>
    <string name="count_of_commands">Команд</string>
    <string name="total_players">Общее число участников</string>
    <string name="gender">Пол</string>
    <string name="profile_name">Имя</string>
    <string name="team">Команда</string>
</resources>