<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="0.4" />


    <TextView
        android:id="@+id/tv_info_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintLeft_toLeftOf="@id/et_email"
        app:layout_constraintRight_toRightOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/image" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tv_info_password"
        app:layout_constraintLeft_toRightOf="@id/left_limiter"
        app:layout_constraintRight_toLeftOf="@id/right_limiter"
        app:layout_constraintTop_toBottomOf="@id/tv_info_email" />


    <TextView
        android:id="@+id/tv_info_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintLeft_toLeftOf="@id/et_password"
        app:layout_constraintRight_toRightOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_email" />


    <android.support.design.widget.TextInputEditText

        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tv_info_password_repeat"
        app:layout_constraintLeft_toRightOf="@id/left_limiter"
        app:layout_constraintRight_toLeftOf="@id/right_limiter"
        app:layout_constraintTop_toBottomOf="@id/tv_info_password" />


    <TextView
        android:id="@+id/tv_info_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password_repeat"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/et_password_repeat"
        app:layout_constraintLeft_toLeftOf="@id/et_password_repeat"
        app:layout_constraintRight_toRightOf="@id/et_password_repeat"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <android.support.design.widget.TextInputEditText

        android:id="@+id/et_password_repeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/swRegistration"
        app:layout_constraintLeft_toRightOf="@id/left_limiter"
        app:layout_constraintRight_toLeftOf="@id/right_limiter"
        app:layout_constraintTop_toBottomOf="@id/tv_info_password_repeat" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/swRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Registration"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button_enter_color"
        android:soundEffectsEnabled="true"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@id/tv_alternative_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swRegistration" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_alternative_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alternative_entering"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@id/iv_google_enter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <ImageView
        android:id="@+id/iv_google_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/googleg_standard_color_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alternative_text"

        />
    <!--- Заглушки для построения UI/> -->
    <!--Добавим иконки для входа с альтернативных аккаунтов, достаточно Google-->

    <View
        android:id="@+id/right_limiter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/et_email"
        app:layout_constraintLeft_toRightOf="@id/et_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_email"
        app:layout_constraintVertical_weight="0.1" />

    <View
        android:id="@+id/left_limiter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/et_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_email"
        app:layout_constraintTop_toTopOf="@id/et_email"
        app:layout_constraintVertical_weight="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>