<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_tournament"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_profile_name"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account_circle_24dp" />

            <TextView
                android:id="@+id/tv_profile_name_child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                app:layout_constraintBottom_toTopOf="@id/tv_bonus_info"
                app:layout_constraintLeft_toRightOf="@id/iv_photo"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_bonus_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_name_child"
                app:layout_constraintBottom_toTopOf="@id/tv_status_info"
                app:layout_constraintLeft_toRightOf="@id/iv_photo" />

            <TextView
                android:id="@+id/tv_status_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Статус"
                app:layout_constraintLeft_toRightOf="@id/iv_photo"
                app:layout_constraintRight_toLeftOf="@id/iv_status"
                app:layout_constraintBottom_toTopOf="@id/tv_tournament_name"
                app:layout_constraintTop_toBottomOf="@id/tv_bonus_info"  />

            <TextView
                android:id="@+id/tv_tournament_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_status_info"
                app:layout_constraintLeft_toRightOf="@id/iv_photo"
                app:layout_constraintRight_toLeftOf="@id/tv_team_name"
                android:paddingRight="10dp"
                android:visibility="gone"
                android:text="Турнир: "/>

            <TextView
                android:id="@+id/tv_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tv_status_info"
                app:layout_constraintLeft_toRightOf="@id/tv_tournament_name"
                android:text="@string/team"/>

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                app:layout_constraintLeft_toLeftOf="@id/iv_photo"
                app:layout_constraintRight_toRightOf="@id/iv_photo"
                app:layout_constraintTop_toBottomOf="@id/iv_photo" />


            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_status_info"
                app:layout_constraintLeft_toRightOf="@id/tv_status_info"
                app:layout_constraintRight_toLeftOf="@id/tv_status_info"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_status_info"
                app:srcCompat="@drawable/ic_status_offline_24dp" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>